objects/CampaignMember__c.object
<CustomObject>
    <label>Campaign Member</label>
    <nameField>
        <label>Campaign Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Members</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>BC_ID__c</fullName>
        <description>GC-144</description>
        <label>BC ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Campaign Members (C)</relationshipLabel>
        <relationshipName>Campaign_Members_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>POS_ID__c</fullName>
        <label>POS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>OB Call Handing status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <default>true</default>
                    <label>To contact</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>(CS) Contacted Once</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>(CS) Second Recontact</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>(CS) Third Recontact</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>(CS) To be recontacted with appointment</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Contacted</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>To be recontacted</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <isActive>false</isActive>
                    <label>Come with +1</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <isActive>false</isActive>
                    <label>Contacted in another campaign</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <isActive>false</isActive>
                    <label>Delivery canceled</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>Failed</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>Ignored</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <isActive>false</isActive>
                    <label>No Show</label>
                </value>
                <value>
                    <fullName>127</fullName>
                    <isActive>false</isActive>
                    <label>Not applicable</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <isActive>false</isActive>
                    <label>Not contactable</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <isActive>false</isActive>
                    <label>Prepared</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>Received on mobile</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <isActive>false</isActive>
                    <label>Send to the service provider</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>Sent</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                    <label>Show</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>Taken into account by the service provider</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred BC CS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BC_Name__c</fullName>
        <description>SRCGSA-682</description>
        <formula>Client__r.Technical_Field_BC__r.Name</formula>
        <label>BC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <label>OB Call OutCome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order on behalf</fullName>
                </value>
                <value>
                    <fullName>Potentially_interested</fullName>
                    <label>Potentially interested</label>
                </value>
                <value>
                    <fullName>Not_interested</fullName>
                    <label>Not interested</label>
                </value>
                <value>
                    <fullName>Not reachable with voicemail</fullName>
                </value>
                <value>
                    <fullName>Not reachable without voicemail</fullName>
                </value>
                <value>
                    <fullName>Invalid number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POS_Name__c</fullName>
        <formula>Client__r.Attachment_POS__r.App_Store_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Market__c</fullName>
        <label>BC Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_EUR__c</fullName>
        <label>Amount (EUR)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>SRCGSA-682</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opt_in_SMS__c</fullName>
        <description>SRCGSA-682</description>
        <formula>Client__r.Opt_in_SMS__c</formula>
        <label>Opt-in SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechMarket__c</fullName>
        <formula>Text(Client__r.Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TechMarket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadlog_Id__c</fullName>
        <externalId>true</externalId>
        <label>Broadlog Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Flag__c</fullName>
        <formula>CASE(Market__c,
&quot;FR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWGBg&quot;,&quot;France&quot;),
&quot;IT&quot;, IMAGE($CustomMetadata.Flag__mdt.IT.URL__c,&quot;Italia&quot;),
&quot;ES&quot;, IMAGE($CustomMetadata.Flag__mdt.ES.URL__c,&quot;Spain&quot;),
&quot;RU&quot;, IMAGE($CustomMetadata.Flag__mdt.RU.URL__c,&quot;Russia&quot;),
&quot;PT&quot;, IMAGE($CustomMetadata.Flag__mdt.PT.URL__c,&quot;Portugal&quot;),
&quot;GB&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWGXO&quot;,&quot;United Kingdom&quot;),
&quot;NL&quot;, IMAGE($CustomMetadata.Flag__mdt.NL.URL__c,&quot;Netherlands&quot;),
&quot;BE&quot;, IMAGE($CustomMetadata.Flag__mdt.BE.URL__c,&quot;Belgium&quot;),
&quot;GR&quot;, IMAGE($CustomMetadata.Flag__mdt.GR.URL__c,&quot;Greece&quot;),
&quot;PL&quot;, IMAGE($CustomMetadata.Flag__mdt.PL.URL__c,&quot;Poland&quot;),
&quot;SE&quot;, IMAGE($CustomMetadata.Flag__mdt.SE.URL__c,&quot;Sweden&quot;),
&quot;CH&quot;, IMAGE($CustomMetadata.Flag__mdt.CH.URL__c,&quot;Switzerland&quot;),
&quot;RO&quot;, IMAGE($CustomMetadata.Flag__mdt.RO.URL__c,&quot;Romania&quot;),
&quot;IE&quot;, IMAGE($CustomMetadata.Flag__mdt.IE.URL__c,&quot;Ireland&quot;),
&quot;DK&quot;, IMAGE($CustomMetadata.Flag__mdt.DK.URL__c,&quot;Denmark&quot;),
&quot;AT&quot;, IMAGE($CustomMetadata.Flag__mdt.AT.URL__c,&quot;Austria&quot;),
&quot;DE&quot;, IMAGE($CustomMetadata.Flag__mdt.DE.URL__c,&quot;Germany&quot;),
&quot;FI&quot;, IMAGE($CustomMetadata.Flag__mdt.FI.URL__c,&quot;Finland&quot;),
&quot;LU&quot;, IMAGE($CustomMetadata.Flag__mdt.LU.URL__c,&quot;Luxembourg&quot;),
&quot;CA&quot;, IMAGE($CustomMetadata.Flag__mdt.CA.URL__c,&quot;Canada&quot;),
&quot;US&quot;, IMAGE($CustomMetadata.Flag__mdt.US.URL__c,&quot;USA&quot;),
&quot;BR&quot;, IMAGE($CustomMetadata.Flag__mdt.BR.URL__c,&quot;Brazil&quot;),
&quot;AE&quot;, IMAGE($CustomMetadata.Flag__mdt.EA.URL__c,&quot;United Arab Emirates&quot;),
&quot;CN&quot;, IMAGE($CustomMetadata.Flag__mdt.CN.URL__c,&quot;China&quot;),
&quot;HK&quot;, IMAGE($CustomMetadata.Flag__mdt.HK.URL__c,&quot;Hong Kong&quot;),
&quot;KR&quot;, IMAGE($CustomMetadata.Flag__mdt.KR.URL__c,&quot;South Korea&quot;),
&quot;JP&quot;, IMAGE($CustomMetadata.Flag__mdt.JP.URL__c,&quot;Japan&quot;),
&quot;SG&quot;, IMAGE($CustomMetadata.Flag__mdt.SG.URL__c,&quot;Singapore&quot;),
&quot;TW&quot;, IMAGE($CustomMetadata.Flag__mdt.TW.URL__c,&quot;Taiwan&quot;),
&quot;ID&quot;, IMAGE($CustomMetadata.Flag__mdt.ID.URL__c,&quot;Indonesia&quot;),
&quot;MY&quot;, IMAGE($CustomMetadata.Flag__mdt.MY.URL__c,&quot;Malaysia&quot;),
&quot;NO&quot;, IMAGE($CustomMetadata.Flag__mdt.NO.URL__c,&quot;Norway&quot;),
&quot;AU&quot;, IMAGE($CustomMetadata.Flag__mdt.AU.URL__c,&quot;Australia&quot;),
&quot;CZ&quot;, IMAGE($CustomMetadata.Flag__mdt.CZ.URL__c,&quot;Czech Republic&quot;),
&quot;HU&quot;, IMAGE($CustomMetadata.Flag__mdt.HU.URL__c,&quot;Hungary&quot;),
&quot;SK&quot;, IMAGE($CustomMetadata.Flag__mdt.SK.URL__c,&quot;Slovakia&quot;),
&quot;INT&quot;, IMAGE($CustomMetadata.Flag__mdt.INT.URL__c,&quot;International&quot;),
IMAGE($CustomMetadata.Flag__mdt.INC.URL__c,&quot;Inconnu&quot;)
)</formula>
        <label>Market Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <description>SRCGSA-663</description>
        <label>Last status update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_picto__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &apos;21&apos;),IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWFo6&quot;, &quot;Green tick&quot;),
IF( ISPICKVAL(Status__c, &apos;22&apos;),IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWFo6&quot;, &quot;Green tick&quot;),
IF( ISPICKVAL(Status__c, &apos;23&apos;),IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWFo6&quot;, &quot;Green tick&quot;),
IF( ISPICKVAL(Status__c, &apos;24&apos;),IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWFo6&quot;, &quot;Green tick&quot;),
IF(ISPICKVAL(Status__c, &apos;10&apos;), IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWFkw&quot;, &quot;Black bell&quot;),&apos;&apos;)))))</formula>
        <label>Outbound call flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnover_12M__c</fullName>
        <description>SRCGSA-682</description>
        <formula>Client__r.Turnover_12M__c</formula>
        <label>Turnover 12M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIC_Customer__c</fullName>
        <formula>Client__r.VIC_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(CS) VIC Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacting_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacting BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Campaign Members (C)</relationshipLabel>
        <relationshipName>Campaign_Members_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loyalty_level__c</fullName>
        <formula>text(Client__r.Loyalty_Level__c)</formula>
        <label>Loyalty level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Type__c</fullName>
        <label>Outreach Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>SMS</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Call</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Postal Mail</label>
                </value>
                <value>
                    <fullName>251</fullName>
                    <label>ZZ_WhatsApp</label>
                </value>
                <value>
                    <fullName>252</fullName>
                    <label>ZZ_WeChat</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>WhatsApp</label>
                </value>
                <value>
                    <fullName>222</fullName>
                    <label>WeChat</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_To_Adobe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating whether the record has been sent to Adobe system via daily batch (Currently applies to Contact360 Campaigns only)</description>
        <label>Send To Adobe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_To_Adobe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating whether the record has been sent to Adobe system via daily batch (Currently applies to Contact360 Campaigns only)</description>
        <label>Sent To Adobe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_call__c</fullName>
        <defaultValue>0</defaultValue>
        <description>calculated by flow in order to know how many call the BC has done on that campaign member</description>
        <label>Number of call</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_typology__c</fullName>
        <formula>TEXT( Client__r.Sales_Typology__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales typology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueUpsertId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Upsert Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_open_date__c</fullName>
        <label>First open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_click_date__c</fullName>
        <label>First click date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_end_date__c</fullName>
        <formula>Campaign__r.EndDate__c</formula>
        <label>Campaign end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contacting_BC_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacting BC user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Adobe_Id__c</fullName>
        <label>Recipient Adobe Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_start_date__c</fullName>
        <formula>Campaign__r.StartDate__c</formula>
        <label>Campaign start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contacted_date_time__c</fullName>
        <label>Contacted date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unsubscription_date__c</fullName>
        <label>Unsubscription date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Transaction_Date__c</fullName>
        <description>SRCGSA-682</description>
        <formula>Client__r.Last_Transaction_Date__c</formula>
        <label>Last Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Post_Call__c</fullName>
        <label>Transaction Post Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_transaction_date__c</fullName>
        <label>First transaction date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_client_answer__c</fullName>
        <description>calculated in the flow campaign member BC attribution : filled when results = Order on behalf or Potentially_interested or Not_interested -&gt; used to calculate the transactions done between this date and 15 days after</description>
        <label>Date/time client answer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Predictive_Segmentation__c</fullName>
        <formula>TEXT(Client__r.PredictiveSegmentation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predictive Segmentation</label>
        <type>Text</type>
    </fields>
</CustomObject>